--- a/src/App.css
+++ b/src/App.css
@@ -3,36 +3,79 @@
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  width: 178px;
+  height: 60.93px;
+  margin-left: 28px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #020203;
+  height: 91px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: absolute;
+  z-index: 100;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.link-header {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 24px;
+  color: #FFFFFF;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-nav {
+  background: #020203;
+  position: fixed;
+  height: 100%;
+  width: 117px;
+  left: 0px;
+  z-index: 10;
+  top: 0px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 25% 0%;
+}
+
+.bonx-nav {
+  position: absolute;
+  left: 26px;
+  top: 347px;
+}
+
+.icon-nav {
+  width: 64px;
+  height: 64px;
+  margin-bottom: 20px;
+}
+
+.nav-link {
+  position: absolute;
+  left: -1.08%;
+  right: -29.5%;
+  top: 47.24%;
+  bottom: 47.42%;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 24px;
+  color: #FFFFFF;
+  transform: rotate(-90deg);
+}
+
+.App-content {
+  position: absolute;
+  /* padding: 68px 90px 86px 107px; */
+  width: 100%;
+  height: 100%;
+  /* left: 117px;
+  top: 91px; */
+  background-color: aqua;
+}
+
+.seconde-box {
+  margin: 159px 90px 86px 224px; 
+  background-color: #FFFFFF;
 }
