--- a/src/components/Nutriment/styles.module.css
+++ b/src/components/Nutriment/styles.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     margin-bottom: 39px;
     padding: 32px 0px;
-    width: 258px;
+    width: 100%;
     background: #FBFBFB;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
     border-radius: 5px;
@@ -16,5 +16,5 @@
 }
 
 .box-global {
-    margin-left: 331px;
+    margin-left: 31px;
 }
