--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,13 @@
   z-index: 10;
   top: 0px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  padding: 25% 0%;
 }
 
 .bonx-nav {
   position: absolute;
   left: 26px;
-  top: 347px;
+  width: 100%;
+  top: 25%;
 }
 
 .icon-nav {
@@ -54,19 +54,20 @@
 
 .nav-link {
   position: absolute;
-  left: -1.08%;
-  right: -29.5%;
-  top: 47.24%;
-  bottom: 47.42%;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 24px;
-  color: #FFFFFF;
-  transform: rotate(-90deg);
+    right: -21.5%;
+    bottom: -30.58%;
+    font-weight: 500;
+    font-size: 13px;
+    height: 45px;
+    width: 200px;
+    line-height: 24px;
+    color: #FFFFFF;
+    transform: rotate(-90deg);
 }
 
 .App-content {
   position: absolute;
+  
   /* padding: 68px 90px 86px 107px; */
   width: 100%;
   height: 100%;
@@ -90,5 +91,14 @@
   /* justify-content: space-between; */
 }
 
+.box-lft {
+  width: 70%;
+}
 
+.box-rght {
+  width: 30%;
+}
 
+.wdth-act-box {
+  width: 100%;
+}
