--- a/src/components/Activiter/styles.module.css
+++ b/src/components/Activiter/styles.module.css
@@ -3,4 +3,5 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
     border-radius: 5px;
     margin-bottom: 28px;
+    width: 100% !important;
 }
