--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -19,3 +19,8 @@
 .one-users:hover{
     background: linear-gradient(145deg, #e6e6e6, #ffffff);
 }
+
+.icon-user {
+    height: 50px;
+    width: 63px;
+}
