ajout de titre session

--- a/src/components/Performance/styles.module.css
+++ b/src/components/Performance/styles.module.css
@@ -3,3 +3,8 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
     border-radius: 5px;
 }
+
+.radar-performance {
+    display: flex;
+    justify-content: center;
+}
