--- a/src/components/Score/styles.module.css
+++ b/src/components/Score/styles.module.css
@@ -2,4 +2,19 @@
     background: #FBFBFB;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
     border-radius: 5px;
+    z-index: 100;
+}
+.legendScore {
+    text-align: center;
+    /* background-color: #FFF; */
+}
+
+.legendScore__number {
+    font-weight: 700;
+    font-size: 26px;
+    margin: 10px;
+}
+.legendScore__text {
+    opacity: 0.5;
+    margin: 5px;
 }
