--- a/src/components/Activiter/styles.module.css
+++ b/src/components/Activiter/styles.module.css
@@ -2,6 +2,6 @@
     background: #FBFBFB;
     /* box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249); */
     border-radius: 5px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     width: 100% !important;
 }
