--- a/src/components/Performance/styles.module.css
+++ b/src/components/Performance/styles.module.css
@@ -2,6 +2,8 @@
     background-color: #282D30;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
     border-radius: 5px;
+    width: 100% ! important;
+    max-width: 258px ! important;
 }
 
 .radar-performance {
