--- a/src/components/Score/styles.module.css
+++ b/src/components/Score/styles.module.css
@@ -3,6 +3,7 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
     border-radius: 5px;
     z-index: 100;
+    width: 100% ! important;
 }
 .legendScore {
     text-align: center;
