--- a/src/components/Session/styles.module.css
+++ b/src/components/Session/styles.module.css
@@ -2,4 +2,5 @@
     background: #FF0000;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0212249);
     border-radius: 5px;
+    width: 100% ! important;
   }
